2003-12-23  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/bprob/bprob.exp: Load target-supports.exp
	* g77.dg/bprob/bprob.exp: Likewise.
	* gcc.misc-tests/bprob.exp: Likewise.
	* gcc.dg/builtins-18.c: Use builtins-config.h.  Do not test float
	variants on systems where the library does not provide that
	functionality.
	* gcc.dg/builtins-20.c: Use builtins-config.h.
	* gcc.dg/builtins-config.h: New file.

	* lib/gcc-dg.exp (dg-require-profiling): New function.
	* lib/target-supports.exp (check_profiling_available): Likewise.
	* g++.dg/bprob/bprob.exp: Use check_profiling_available.
	* g77.dg/bprob/bprob.exp: Likewise.
	* gcc.misc-tests/bprob.exp: Likewise.
	* g++.old-deja/g++.law/profile1.C: Use dg-require-profiling.
	* gcc.dg/20021014-1.c: Likewise.
	* gcc.dg/nest.c: Likewise.

	* g++.dg/lookup/java1.C: Use -fdollars-in-identifiers when
	compiling.
	* g++.dg/lookup/java2.C: Likewise.
	* gcc.dg/cpp/lexident.c: Likewise.
	
2003-12-23  Mark Mitchell  <mark@codesourcery.com>

	* g++.dg/abi/macro0.C: New test.
	* g++.dg/abi/macro1.C: Likewise.
	* g++.dg/abi/macro2.C: Likewise.

	* g++.dg/abi/bitfield5.C: Add explicit -fabi-version=1 option.
	* g++.dg/abi/bitfield7.C: Likewise.
	* g++.dg/abi/dtor2.C: Likewise.
	* g++.dg/abi/mangle11.C: Likewise.
	* g++.dg/abi/mangle12.C: Likewise.
	* g++.dg/abi/mangle14.C: Likewise.
	* g++.dg/abi/mangle17.C: Likewise.
	* g++.dg/abi/vbase10.C: Likewise.
	* g++.dg/abi/vbase14.C: Likewise.
	* g++.dg/template/qualttp17.C: Likewise.

2003-12-21  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c/11995
	* gcc.dg/20031223-1.c: New test.

2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/noreturn-7.c: New test.

2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/null-pointer-1.c: New test.

2003-12-22  Mark Mitchell  <mark@codesourcery.com>

	* g++.old-deja/g++.jason/template18.C: Remove.
	* g++.old-deja/g++.jason/template37.C: Likewise.

	PR c++/12862
	* g++.dg/lookup/ns1.C: New test.

	PR c++/12397