@@ -7,7 +7,10 @@
 
 /* { dg-do compile } */
 /* { dg-options "-O2 -std=c99" } */
-/* { dg-final { scan-assembler-not "L\\\$?C\[^A-Z\]" } } */
+/* This test fails on ARM cores because we use a block move to
+   initialize "S" in test2, and GCC is not clever enough to eliminate
+   the block move.  */
+/* { dg-final { scan-assembler-not "L\\\$?C\[^A-Z\]" { xfail arm-*-* } } } */
 
 #define I (__extension__ 1.0iF)
 
