@@ -1,3 +1,7 @@
+2003-12-28  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc.dg/const-elim-1.c: XFAIL on arm-*-*.
+
 2003-12-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/bprob/bprob.exp: Load target-supports.exp
